chore:fixed the overflow number at topnav

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -530,7 +530,7 @@ nav {
   .register {
     margin-left: 1rem;
   }
-  .mobile {
+  .mobile-number {
     margin-left: 11px;
   }
   .topnav-container {
@@ -3565,13 +3565,13 @@ grid-template-columns: 1fr;
   // display:block;
   transform:translateX(10px);
   transition:0.3s ease-in;
-  z-index: 100;
-    top: 0px;
-    left: 0px;
-    height: 100vh;
-    width: 60%;
-    box-shadow: 1px 1px 4px rgb(176, 177, 183);
-    position: fixed;
+  // z-index: 100;
+  //   top: 0px;
+  //   left: 0px;
+  //   height: 100vh;
+  //   width: 60%;
+  //   box-shadow: 1px 1px 4px rgb(176, 177, 183);
+  //   position: fixed;
 }
 
 // OPEN DAYS CSS
